err/slimta.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_data'...
Listing './lib/python3.5/site-packages/passlib/_data/wordsets'...
Listing './lib/python3.5/site-packages/passlib/crypto'...
Listing './lib/python3.5/site-packages/passlib/crypto/_blowfish'...
Listing './lib/python3.5/site-packages/passlib/crypto/scrypt'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/compat'...
Listing './lib/python3.5/site-packages/passlib-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycares'...
Listing './lib/python3.5/site-packages/pycares-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pysasl'...
Listing './lib/python3.5/site-packages/pysasl-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/python_slimta-4.0.4.dist-info'...
Listing './lib/python3.5/site-packages/python_slimta_lookup-0.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slimta'...
Listing './lib/python3.5/site-packages/slimta/app'...
Listing './lib/python3.5/site-packages/slimta/app/etc'...
Compiling './lib/python3.5/site-packages/slimta/app/setup.py'...
***   File "./lib/python3.5/site-packages/slimta/app/setup.py", line 69
    os.makedirs(etc_dir, 0755)
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/slimta/edge'...
Listing './lib/python3.5/site-packages/slimta/http'...
Listing './lib/python3.5/site-packages/slimta/logging'...
Listing './lib/python3.5/site-packages/slimta/lookup'...
Listing './lib/python3.5/site-packages/slimta/lookup/drivers'...
Listing './lib/python3.5/site-packages/slimta/policy'...
Listing './lib/python3.5/site-packages/slimta/queue'...
Listing './lib/python3.5/site-packages/slimta/relay'...
Listing './lib/python3.5/site-packages/slimta/relay/smtp'...
Listing './lib/python3.5/site-packages/slimta/smtp'...
Listing './lib/python3.5/site-packages/slimta/util'...
Listing './lib/python3.5/site-packages/slimta-0.6.5.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
